--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <%= render "shared/header.html (1)" %>
     <%= yield %>
+    <%= render "shared/footer" %>
   </body>
 </html>
