feat: ユーザー登録・ログイン機能を実装するため、sorceryを使用 、また、画面遷移機能・バリデーション設定を実施

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,11 @@
   </head>
 
   <body>
-    <%= render "shared/header.html (1)" %>
+    <% if logged_in? %>
+      <%= render 'shared/header.html' %>
+    <% else %>
+      <%= render "shared/before_login_header" %>
+    <% end %>
     <%= yield %>
     <%= render "shared/footer" %>
   </body>
