--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -33,7 +33,7 @@
             <div class='dropdown-item'>らんてっく たろう</div>
             <div class='dropdown-divider'></div>
             <%= link_to "プロフィール", "#", class: 'dropdown-item' %>
-            <%= link_to "ログアウト", "#", class: 'dropdown-item' %>
+            <%= link_to "ログアウト", logout_path, method: :delete, class: 'dropdown-item' %>
           </div>
         </li>
       </ul>
