--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -11,7 +11,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto main-nav align-items-center">
-          <%= link_to "ログイン", login_path, class: "nav-link" %>
+          <%= link_to (t 'defaults.login'), login_path, class: "nav-link" %>
       </ul>
     </div>
   </nav>
