フラッシュメッセージを設定

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
 
   <body>
+    <%= render 'shared/flash_message' %>
     <% if logged_in? %>
       <%= render 'shared/header.html' %>
     <% else %>
