--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -4,24 +4,9 @@
       <%= image_tag board.board_image_url, class: 'card-img-top', size: '300x200' %>
       <div class="card-body">
         <h4 class="card-title">
-          <a href="#">
-            <%= board.title %>
-          </a>
+          <%= link_to board.title, "/boards/#{board.id}" %>
         </h4>
-        <div class='mr10 float-right'>
-          <a href="#"><%= icon 'fas', 'trash', class: 'pr-1' %></a>
-          <a href="#"><%= icon 'fa', 'pen' %></a>
-        </div>
-        <ul class="list-inline">
-          <li class="list-inline-item">
-            <%= icon 'far', 'user' %>
-            <%= board.user.decorate.full_name %>
-          </li>
-          <li class="list-inline-item">
-            <%= icon 'far', 'calendar' %>
-            <%= l board.created_at, format: :long %>
-          </li>
-        </ul>
+        <%= render "crud_menus", board: board%>
         <p class="card-text"><%= board.body %></p>
       </div>
     </div>
