feat: 掲示板の編集、削除機能の実装

--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -6,7 +6,19 @@
         <h4 class="card-title">
           <%= link_to board.title, "/boards/#{board.id}" %>
         </h4>
-        <%= render "crud_menus", board: board%>
+        <% if current_user.own?(board) %>
+          <%= render 'crud_menus', board: board %>
+        <% end %>
+        <ul class="list-inline">
+          <li class="list-inline-item">
+            <%= icon 'far', 'user' %>
+            <%= board.user.decorate.full_name %>
+          </li>
+          <li class="list-inline-item">
+            <%= icon 'far', 'calendar' %>
+            <%= l board.created_at, format: :long %>
+          </li>
+        </ul>
         <p class="card-text"><%= board.body %></p>
       </div>
     </div>
