--- a/app/views/boards/_crud_menus.html.erb
+++ b/app/views/boards/_crud_menus.html.erb
@@ -1,14 +1,12 @@
-<div class='mr10 float-right'>
-  <a href="#"><%= icon 'fas', 'trash', class: 'pr-1' %></a>
-  <a href="#"><%= icon 'fa', 'pen' %></a>
-</div>
-<ul class="list-inline">
+<ul class='crud-menu-btn list-inline float-right'>
   <li class="list-inline-item">
-    <%= icon 'far', 'user' %>
-    <%= board.user.decorate.full_name %>
+    <%= link_to edit_board_path(board), id: "button-edit-#{board.id}" do %>
+      <%= icon 'fa', 'pen' %>
+    <% end %>
   </li>
   <li class="list-inline-item">
-    <%= icon 'far', 'calendar' %>
-    <%= l board.created_at, format: :long %>
+    <%= link_to board_path(board), id: "button-delete-#{board.id}", method: :delete, data: {confirm: t('defaults.message.delete_confirm')} do %>
+      <%= icon 'fas', 'trash' %>
+    <% end %>
   </li>
 </ul>
