--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -16,6 +16,9 @@
                 <li class="list-inline-item"><%= @board.user.decorate.full_name %></li>
                 <li class="list-inline-item"><%= @board.created_at %></li>
               </ul>
+              <% if current_user.own?(@board) %>
+                <%= render 'crud_menus', board: @board %>
+              <% end %>
             </div>
           </div>
           <p><%= @board.body %></p>
