--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -20,13 +20,13 @@
           <td class="action">
             <ul class="list-inline justify-content-center" style="float: right;">
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-pen"></i>
+                <a href="#" class='js-edit-comment-button' data-comment-id="<%= comment.id %>">
+                  <%= icon 'fa', 'pen' %>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-trash"></i>
+                <a href="#" class='js-delete-comment-button' data-comment-id="<%= comment.id %>">
+                  <%= icon 'fas', 'trash' %>
                 </a>
               </li>
             </ul>
