--- a/app/views/bookmarks/_bookmark.html.erb
+++ b/app/views/bookmarks/_bookmark.html.erb
@@ -1,5 +1,5 @@
 <div class='mr10 float-right'>
-  <%= link_to board_bookmarks_path(board), method: :post , id: "js-bookmark-button-for-board-#{board.id}" do %>
+  <%= link_to board_bookmarks_path(board), method: :post, remote: true, id: "js-bookmark-button-for-board-#{board.id}" do %>
     <i class="far fa-star"></i>
   <% end %>
 </div>
