--- a/app/views/bookmarks/_unbookmark.html.erb
+++ b/app/views/bookmarks/_unbookmark.html.erb
@@ -1,5 +1,5 @@
 <div class='mr10 float-right'>
-  <%= link_to board_bookmarks_path(board), method: :delete , id: "js-bookmark-button-for-board-#{board.id}" do %>
+  <%= link_to board_bookmarks_path(board), method: :delete, remote: true, id: "js-bookmark-button-for-board-#{board.id}" do %>
     <i class="fas fa-star"></i>
   <% end %>
 </div>
