--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,38 +1,32 @@
-<div class="row">
-  <div class="col-lg-8 offset-lg-2">
-    <table id="js-table-comment" class="table">
-      <tr id="comment-25">
-        <td style="width: 60px">
-          <%= image_tag 'sample', width: "50", height: "50", class: 'rounded-circle'%>
-        </td>
-        <td>
-          <h3 class="small"><%= comment.user.decorate.full_name%></h3>
-          <div id="js-comment-25">
-            <p><%= simple_format(comment.body) %></p>
-          </div>
-          <div id="js-textarea-comment-box-<%= comment.id %>" style="display: none;">
-            <textarea class="form-control mb-1"><%= comment.body %></textarea>
-            <button class="btn btn-light">キャンセル</button>
-            <button class="btn btn-success">更新</button>
-          </div>
-        </td>
-        <% if current_user.own?(comment) %>
-          <td class="action">
-            <ul class="list-inline justify-content-center" style="float: right;">
-              <li class="list-inline-item">
-                <a href="#" class='js-edit-comment-button' data-comment-id="<%= comment.id %>">
-                  <%= icon 'fa', 'pen' %>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#" class='js-delete-comment-button' data-comment-id="<%= comment.id %>">
-                  <%= icon 'fas', 'trash' %>
-                </a>
-              </li>
-            </ul>
-          </td>
-        <% end %>
-      </tr>
-    </table>
-  </div>
-</div>
+<tr id="comment-<%= comment.id %>">
+  <td style="width: 60px">
+    <%= image_tag 'sample', width: "50", height: "50", class: 'rounded-circle'%>
+  </td>
+  <td>
+    <h3 class="small"><%= comment.user.decorate.full_name%></h3>
+    <div id="js-comment-25">
+      <p><%= simple_format(comment.body) %></p>
+    </div>
+    <div id="js-textarea-comment-box-<%= comment.id %>" style="display: none;">
+      <textarea class="form-control mb-1"><%= comment.body %></textarea>
+      <button class="btn btn-light">キャンセル</button>
+      <button class="btn btn-success">更新</button>
+    </div>
+  </td>
+  <% if current_user.own?(comment) %>
+    <td class="action">
+      <ul class="list-inline justify-content-center" style="float: right;">
+        <li class="list-inline-item">
+          <%= link_to new_board_comment_path(comment, comment_id: comment), class: "js-edit-comment-button", remote: true do %>
+            <%= icon 'fa', 'pen' %>
+          <% end %>
+        </li>
+        <li class="list-inline-item">
+          <%= link_to comment_path(comment, comment_id: comment), class: 'js-delete-comment-button', method: :delete, data: { confirm: t('defaults.message.delete_confirm') }, remote: true do %>
+            <%= icon 'fa', 'trash' %>
+          <% end %>
+        </li>
+      </ul>
+    </td>
+  <% end %>
+</t>
