--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,9 +1,10 @@
 <div class="row mb-3">
   <div class="col-lg-8 offset-lg-2">
-    <%= form_with model: [board, board.comments.build], local: true do |f| %>
-      <%= render 'shared/error_messages', object: f.object %>
-      <%= f.label :body %>
-      <%= f.text_area :body, class: "form-control mb-3", row: 4, placeholder: "コメント" %>
+    <%= form_with model: [board, board.comments.build], id: "new_comment", remote: true do |f| %>
+      <div class='form-group'>
+        <%= f.label :body %>
+        <%= f.text_area :body, class: "form-control mb-3", row: 4, id: "js-new-comment-body", placeholder: "コメント" %>
+      </div>
       <%= f.submit t('defaults.post'), class: 'btn btn-primary' %>
     <% end %>
   </div>
