掲示板とブックマーク一覧にペンネーションを実装

--- a/app/views/boards/bookmarks.html.erb
+++ b/app/views/boards/bookmarks.html.erb
@@ -23,6 +23,8 @@
         <% else %>
           <p><%= t('.no_result') %></p>
         <% end %>
+        <!-- ページネーション -->
+      <%= paginate @boards, theme: 'twitter-bootstrap-4' %>
       </div>
     </div>
   </div>
