--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -15,6 +15,7 @@
   </div>
 
   <!-- 掲示板一覧 -->
+  
   <div class="row">
     <div class="col-12">
       <div class="row">
@@ -24,6 +25,8 @@
           <p><%= t('.no_result') %></p>
         <% end %>
       </div>
+      <!-- ページネーション -->
+      <%= paginate @boards, theme: 'twitter-bootstrap-4' %>
     </div>
   </div>
 </div>
