--- a/app/views/admin/layouts/application.html.erb
+++ b/app/views/admin/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta lang='ja'>
     <meta name="robots" content="noindex, nofollow">
-    <title><% content_for(:title, t('.title')) %></title>
+    <title><%= page_title(yield(:title), admin: true) %></title>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag 'admin', media: 'all' %>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
